# face_auth

./: .gitignore  AUTO_SETUP_SUMMARY.md  CHANGES.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  TEST_INSTRUCTIONS.md  WORKFLOW_GUIDE.md  face_database.json  face_database_v2.json  integration_test.sh  python_face_auth.py  python_face_auth_simple.py  python_simple_test.py  requirements.txt  setup_python_env.sh  simple_verify.sh  task.md  test_auth_loading.py  test_mock_data.py  test_system.sh  test_workflow.sh  verify_plug_and_play.sh
example/: .gitignore  Cargo.toml
example/source/: a.json
example/src/: main.rs
source/: apon.json  mushfik.json  osman.json  remon.json
src/: authentication.rs  camera.rs  face_detection.rs  face_storage.rs  lib.rs  main.rs  python_integration.rs  registration.rs  standalone_python.rs
test_image/: img11.avif  img13.avif  img21.avif
