[package]
name = "face_auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "face_auth"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", features = ["avif", "webp"] }
imageproc = "0.25"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
# Enhanced face recognition dependencies
ndarray = "0.16"
rayon = "1.8"
nalgebra = "0.33"
