[package]
name = "face_auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "face_auth"
path = "src/lib.rs"

[[bin]]
name = "face_auth"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
